--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,12 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
   },
-  "keywords": ["rest-api", "photo-restoration", "ai", "express"],
+  "keywords": [
+    "rest-api",
+    "photo-restoration",
+    "ai",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,9 +29,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
+    "passport-apple": "^2.0.0",
     "passport-facebook": "^3.0.0",
-    "passport-apple": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,11 +42,10 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
     "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-facebook": "^3.0.2",
+    "@types/passport-google-oauth20": "^2.0.14",
     "prisma": "^5.19.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   }
 }
-
