--- a/backend/package.json
+++ b/backend/package.json
@@ -31,8 +31,7 @@
     "passport": "^0.7.0",
     "passport-apple": "^2.0.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "sharp": "^0.34.5"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
