--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/aiplatform": "^6.0.0",
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
