--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "passport": "^0.7.0",
     "passport-apple": "^2.0.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "replicate": "^0.32.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
