--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "passport-apple": "^2.0.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "replicate": "^0.32.0"
+    "replicate": "^0.32.0",
+    "@aws-sdk/client-s3": "^3.700.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
