--- a/backend/package.json
+++ b/backend/package.json
@@ -35,8 +35,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "replicate": "^0.32.0",
-    "@aws-sdk/client-s3": "^3.700.0",
-    "stripe": "^17.3.1"
+    "@aws-sdk/client-s3": "^3.700.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
